# manila-image-elements

./: .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  build.sh  lower-constraints.txt  other-requirements.txt  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
data/docker/: Dockerfile  dbus.sh  entrypoint.sh  ganesha.conf  ganesha.sh  rpcbind.sh  samba.sh  slapd.sh
data/lxd/meta/: metadata.yaml
doc/source/: conf.py  index.rst
elements/centos-cephfs/install.d/: 50-manila-cephfs
elements/centos-cifs/install.d/: 50-manila-cifs
elements/centos-cifs/post-install.d/: 50-manila-smb-enable
elements/centos-nfs/install.d/: 50-manila-nfs
elements/centos-nfs/post-install.d/: 50-manila-nfs-enable
elements/cephfs/: README.rst  package-installs.yaml
elements/manila-centos-minimal/: README.rst  element-deps  package-installs.yaml
elements/manila-centos-minimal/post-install.d/: 50-manila-user
elements/manila-centos-minimal/pre-install.d/: 00-centos-yum-update
elements/manila-cifs/install.d/: 50-manila-cifs
elements/manila-cifs/post-install.d/: 50-manila-samba-patch-config
elements/manila-container/post-install.d/: 99-configure-network
elements/manila-ganesha-nfs/: package-installs.yaml
elements/manila-ganesha-nfs/install.d/: 50-manila-ganesha-nfs  (+1 more)
elements/manila-ssh/: README.rst  package-installs.yaml
elements/manila-ubuntu-core/: README.rst
elements/manila-ubuntu-minimal/: README.rst  package-installs.yaml
elements/ubuntu-nfs-ganesha/: package-installs.yaml
playbooks/: container-image-build.yaml  container-image-upload.yaml
playbooks/manila-buildimage-docker/: run.yaml
playbooks/manila-buildimage-generic/: run.yaml
playbooks/manila-buildimages/: run-generic-scenario.yaml  run.yaml
playbooks/manila-publish-artifacts/: post.yaml
roles/build-mie-images/: README.rst
tools/: add_to_rootfs_tar  docker_builder.sh  run_bashate.sh
tools/gate/: build-images
zuul.d/: manila-image-elements-jobs.yaml  project.yaml
(+31 files in other folders)
