[metadata]
name = manila-image-elements
summary = Image elements for Manila
description-file = README.rst
license = Apache Software License
classifiers =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/developer/manila

[files]
scripts =
    bin/manila-image-create

data_files =
    share/manila-elements/elements = elements/*

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[wheel]
universal = 1
